[package]
name = "num_vector"
version = "0.1.0"
authors = ["Edgar Justus <EdgarJustus94@gmail.com>"]
categories = ["mathematics", "vector"]
description = "Enabling basic vector arithmetic operations"
edition = "2021"
keywords = [
    "vector",
    "mathematics",
    "arithmetic",
    "vector arithmetic",
    "math",
    "vec",
]
license = "MIT"
repository = "https://github.com/HansAmPfaall/num_vector"
rust-version = "1.80.1"

[dependencies]
